feat: redesign the agent page
